# raymarch_2d

./: CMakeLists.txt
res/: compute.comp  compute_clear_image.comp  tutorial2.frag  tutorial2.vert
src/: color.h  drawgl.c  gl_error_checking.c  gl_error_checking.h  log.c  log.h  main.c  mat.c  mat.h  perlin.c  perlin.h  shader.c  shader.h  vec.h  vec2.h  vec3.h  vertex_format.h
tests/: CMakeLists.txt  mat_test.c  testing.c  testing.h
